Update blood drop icon count in index.html
Reduced blood drop icons from 8 to 5 in the .blood class.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 }
 
 .blood::after {
-  content: "🩸🩸🩸🩸🩸🩸"; /* 8 نقاط دم */
+  content: "🩸🩸🩸🩸🩸"; /* 8 نقاط دم */
   position: absolute;
   bottom: -30px; /* تحت العنوان */
   left: 8%;
